SUSTech/CS323/project/test/test_1/test_oWcQdv3L.out
Error type B at line 4 : Missing COMMA 
Error type B at line 5 : Missing RC
