SUSTech/CS323/project/test/test_1/test_oWcQdv3L.spl

int test_11712702_2()
{
  int a = 2  b = 1;
  return 1;

